--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <script src="libs/mt.js"></script>
         <script src="libs/tmlib.js"></script>
+        <script src="libs/tmlib.custom.js"></script>
         <script src="libs/loader.js"></script>
         <script src="libs/font.js"></script>
         <script src="libs/outlinelabel.js"></script>
