move cordova files

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <link rel="apple-touch-icon-precomposed" href="icon.png" />
 
         <script src="src/Benri.js"></script>
-        <script src="src/CdvDeviceEvents.js"></script>
-        <script src="src/CdvAdmob.js"></script>
-        <script src="src/CdvGameCenter.js"></script>
-        <script src="src/CdvSNS.js"></script>
+        <script src="src/cordova/CdvDeviceEvents.js"></script>
+        <script src="src/cordova/CdvAdmob.js"></script>
+        <script src="src/cordova/CdvGameCenter.js"></script>
+        <script src="src/cordova/CdvSNS.js"></script>
 
         <script src="libs/mt.js"></script>
         <script src="libs/tmlib.js"></script>
