--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <script src="src/main.js"></script>
         <script src="src/Application.js"></script>
         <script src="src/assets.js"></script>
+        <script src="src/SpriteSheet.js"></script>
 
         <script src="src/scene/LoadingScene.js"></script>
         <script src="src/scene/MainScene.js"></script>
